--- a/commercialoperator/templates/ledgerui/organisation.html
+++ b/commercialoperator/templates/ledgerui/organisation.html
@@ -4,7 +4,7 @@
 
 {% block myorganisation_nav %}
 
-<button class="nav-link managed-organisation-nav" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Organisation User</button>
+<button class="nav-link managed-organisation-nav" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Organisations</button>
 
 {% endblock %}
 
@@ -12,7 +12,17 @@
 
  
 <div id="nav-profile-tab-page" style="display:none;">
-    <div id="app"></div>
+    <div id="app">
+        <!-- Display a spinner while waiting for the component to load -->
+        <div class="d-flex justify-content-center align-items-center mt-5">
+            <div class="spinner-grow text-primary" role="status">
+                <span class="visually-hidden">Loading...</span>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center mb-5">
+            <strong>Loading</strong>
+        </div>
+    </div>
 </div>
 
 
