Added abort-booking session url pattern

--- a/commercialoperator/templates/payments/payment-details_base_b5.html
+++ b/commercialoperator/templates/payments/payment-details_base_b5.html
@@ -51,9 +51,8 @@
 <div class="container">
 	<div class="row">
 		<div class='col-12' style='padding: 30px'>
-            {% comment %} NOTE: Implement proper back and quit urls {% endcomment %}
 			<a class='btn btn-warning' href="/">BACK</a>
-			<a class='btn btn-danger' href="/">QUIT</a>
+			<a class='btn btn-danger' href="/booking-session/abort-redirect">QUIT</a>
 		</div>
 	</div>
 </div>
