--- a/commercialoperator/templates/payments/payment-details_base_b5.html
+++ b/commercialoperator/templates/payments/payment-details_base_b5.html
@@ -2,6 +2,9 @@
 
 {% block page_content_inner_top %}
 
+{% load users %}
+{% is_internal as is_internal_login %}
+
 <script>
     var payment_processing = 
     {
@@ -36,6 +39,7 @@
 
     if (window.location.href.indexOf("payment-details") != -1) {
         setInterval(function() {
+            createCookie(document.getElementById('payment-csrfmiddlewaretoken').value, "{{ checkouthash }}");
             var checkouthash_cookie = readCookie("checkouthash");
             if (payment_processing.var.checkouthash != checkouthash_cookie) {
                 if ("{{is_internal_login}}" == "True") {
@@ -43,7 +47,7 @@
                 } else {
                     window.location = "/external"
                 }
-            }
+            }		
         },"500");
     }
 </script>
