--- a/commercialoperator/components/proposals/templates/commercialoperator/reversion_history.html
+++ b/commercialoperator/components/proposals/templates/commercialoperator/reversion_history.html
@@ -1,9 +1,7 @@
 {% extends "admin/base.html" %}
-
 {% block extrastyle %}
-  {{ block.super }}
-
-  <style type="text/css">
+    {{ block.super }}
+    <style type="text/css">
     /* minimal style for the diffs */
     del, ins {
       color: #000;
@@ -12,32 +10,23 @@
     del { background-color: #ffe6e6;  }
     ins { background-color: #e6ffe6;  }
     sup.follow { color: #5555ff;  }
-  </style>
-
-{% endblock %}
-
-
-
-
+    </style>
+{% endblock extrastyle %}
 {% block content %}
-
-  {% include "reversion-compare/action_list_partial.html"  %}
-  {% if request.GET.version_id1 %}
-    {% include "reversion-compare/compare_partial.html"  %}
-    {% include "reversion-compare/compare_links_partial.html"  %}
-  {% endif %}
-
-<div class="navbar navbar-fixed-bottom">
-  <div class="navbar-inner">
-    <div class="container">
-      <p class="pull-right">
-          {% comment %}
+    {% include "reversion-compare/action_list_partial.html" %}
+    {% if request.GET.version_id1 %}
+        {% include "reversion-compare/compare_partial.html" %}
+        {% include "reversion-compare/compare_links_partial.html" %}
+    {% endif %}
+    <div class="navbar navbar-fixed-bottom">
+        <div class="navbar-inner">
+            <div class="container">
+                <p class="pull-right">
+                    {% comment %}
           <a href="{% url 'bushfire:bushfire_final' bushfire.id %}" class="btn btn-success">Return</a>
-          {% endcomment %}
-      </p>
+                    {% endcomment %}
+                </p>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
-
-{% endblock %}
-
+{% endblock content %}
