--- a/commercialoperator/templates/commercialoperator/booking/preview_deferred.html
+++ b/commercialoperator/templates/commercialoperator/booking/preview_deferred.html
@@ -1,24 +1,20 @@
-{% extends 'oscar/checkout/preview.html' %}
+{% extends "oscar/checkout/preview.html" %}
 {% load currency_filters %}
 {% load utils %}
 {% load i18n %}
 {% load thumbnail %}
 {% load purchase_info_tags %}
 {% load staticfiles %}
-
 <!-- remove shipping content -->
 {% block shipping_address %}
 {% endblock shipping_address %}
-
 <!-- remove nav/breadcrumbs content -->
 {% block checkout_nav %}
-{% endblock %}
-
+{% endblock checkout_nav %}
 {% block order_contents %}
     <div class="sub-header">
         {% block order_contents_actions %}
-        {% endblock %}
-
+        {% endblock order_contents_actions %}
         <h2>{% trans "Order contents" %}</h2>
     </div>
     <div class="basket-title">
@@ -28,41 +24,31 @@
             <p class="col-sm-2 h4 align-right">{% trans "Total" %}</p>
         </div>
     </div>
-        {% for line in lines %}
-            <div class="basket-items">
-                <div class="row">
-                    <div class="col-sm-2">
-                        {{ forloop.counter  }}
-                    </div>
-                    <div class="col-sm-7">
-                        <h3>{{ line.ledger_description }}</h3>
-                    </div>
-                    <div class="col-sm-1 align-center">
-                        {{ line.quantity }}
-                    </div>
-                    <div class="col-sm-2 align-right">
-                        <p class="price_color">
-                            {{ line.price_incl_tax|total_line_price:line.quantity }}
-                        </p>
-                    </div>
+    {% for line in lines %}
+        <div class="basket-items">
+            <div class="row">
+                <div class="col-sm-2">{{ forloop.counter }}</div>
+                <div class="col-sm-7">
+                    <h3>{{ line.ledger_description }}</h3>
+                </div>
+                <div class="col-sm-1 align-center">{{ line.quantity }}</div>
+                <div class="col-sm-2 align-right">
+                    <p class="price_color">{{ line.price_incl_tax|total_line_price:line.quantity }}</p>
                 </div>
             </div>
-        {% endfor %}
-
+        </div>
+    {% endfor %}
     <div class="row">
         <div class="col-sm-6">&nbsp;</div>
         <div class="col-sm-6">
             <div class="sub-header">
-                <h2>{% trans 'Totals' %}</h2>
-
+                <h2>{% trans "Totals" %}</h2>
                 <div id="basket_totals">
                     <table class="table table-condensed">
                         <tbody>
                             <tr>
                                 <th class="total">{% trans "Basket total" %}</th>
-                                <th class="total align-right">
-                                    {{ lines|basket_total_price }}
-                                </th>
+                                <th class="total align-right">{{ lines|basket_total_price }}</th>
                             </tr>
                             <tr>
                                 <th>&nbsp;</th>
@@ -71,31 +57,32 @@
                         </tbody>
                     </table>
                 </div>
-
             </div>
         </div>
     </div>
-
 {% endblock order_contents %}
-
 {% block payment_method %}
-
-{% endblock %}
-
+{% endblock payment_method %}
 {% block place_order %}
-    <form method="post" action="{% url 'deferred_invoicing' proposal_id %}" id="place_order_form">
+    <form method="post"
+          action="{% url 'deferred_invoicing' proposal_id %}"
+          id="place_order_form">
         {% csrf_token %}
         <input type="hidden" name="action" value="place_order" />
         <input type="hidden" name='line_details' value='{{ line_details }}' />
         <input type="hidden" name='method' value='{{ payment_method }}' />
-
         <div class="form-group clearfix">
             <div class="row">
                 <div class="col-sm-3 col-sm-offset-9">
-                     <input type="button" class="btn btn-primary btn-lg" value="Cancel" onclick="window.history.back()" />
-                     <button id="place-order" formnovalidate type="submit" class="btn btn-primary btn-lg" data-loading-text="{% trans 'Submitting...' %}">
-                        {% trans "Continue" %}
-                     </button>
+                    <input type="button"
+                           class="btn btn-primary btn-lg"
+                           value="Cancel"
+                           onclick="window.history.back()" />
+                    <button id="place-order"
+                            formnovalidate
+                            type="submit"
+                            class="btn btn-primary btn-lg"
+                            data-loading-text='{% trans "Submitting..." %}'>{% trans "Continue" %}</button>
                 </div>
             </div>
         </div>
