--- a/commercialoperator/templates/commercialoperator/dash/index.html
+++ b/commercialoperator/templates/commercialoperator/dash/index.html
@@ -1,11 +1,11 @@
-{% extends 'commercialoperator/base.html' %}
+{% extends "commercialoperator/base.html" %}
 {% load static %}
 
 {% block content %}
     <div class="container-fluid" id="dashboard-table-container">
         {% block vue-component %}
         <div id="app"></div>
-        {% endblock %}
+        {% endblock vue-component %}
 
     </div>
-{% endblock %}
+{% endblock content %}
