--- a/commercialoperator/templates/commercialoperator/further_info.html
+++ b/commercialoperator/templates/commercialoperator/further_info.html
@@ -1,30 +1,30 @@
-{% extends 'commercialoperator/base.html' %}
-
+{% extends "commercialoperator/base.html" %}
 {% load bootstrap3 %}
-
 {% load static %}
-
 {% block extra_css %}
-    <link type="text/css" href="{% static 'wl/css/index.css' %}" rel="stylesheet">
-{% endblock %}
-
+    <link type="text/css"
+          href="{% static 'wl/css/index.css' %}"
+          rel="stylesheet">
+{% endblock extra_css %}
 {% block left_menu_items %}
-    <li><a  href="{% url 'ds_contact' %}">Contact Us</a></li>
-    <li><a  href="{% url 'ds_further_info' %}">Further Information</a></li>
-{% endblock %}
-
+    <li>
+        <a href="{% url 'ds_contact' %}">Contact Us</a>
+    </li>
+    <li>
+        <a href="{% url 'ds_further_info' %}">Further Information</a>
+    </li>
+{% endblock left_menu_items %}
 {% block messages %}
-{% endblock %}
-
+{% endblock messages %}
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <h2>
-                    Further Information
-                </h2>
-                <p>For further information, please email <b>{{ support_email }}</b>.</p>
+                <h2>Further Information</h2>
+                <p>
+                    For further information, please email <b>{{ support_email }}</b>.
+                </p>
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
