--- a/commercialoperator/templates/commercialoperator/index.html
+++ b/commercialoperator/templates/commercialoperator/index.html
@@ -1,52 +1,49 @@
-{% extends 'commercialoperator/base.html' %}
-
+{% extends "commercialoperator/base.html" %}
 {% load static %}
 {% load utils %}
-
 {% block extra_css %}
-    <link type="text/css" href="{% static 'wl/css/index.css' %}" rel="stylesheet">
-{% endblock %}
-
+    <link type="text/css"
+          href="{% static 'wl/css/index.css' %}"
+          rel="stylesheet">
+{% endblock extra_css %}
 {% block left_menu_items %}
-    <li><a  href="{% url 'ds_contact' %}">Contact Us</a></li>
-    <li><a  href="{% url 'ds_further_info' %}">Further Information</a></li>
-{% endblock %}
-
+    <li>
+        <a href="{% url 'ds_contact' %}">Contact Us</a>
+    </li>
+    <li>
+        <a href="{% url 'ds_further_info' %}">Further Information</a>
+    </li>
+{% endblock left_menu_items %}
 {% block messages %}
-{% endblock %}
-
+{% endblock messages %}
 {% block content %}
     <div class="container">
         <div class="row">
             <div class="col-md-8">
-                <h2>
-                    Welcome to the {% system_name %} System
-                </h2>
-                    <p class="w-75">
+                <h2>Welcome to the {% system_name %} System</h2>
+                <p class="w-75">
                     Login to the system to apply for a licence, to comply with a licence or condition or to view and update your details.
                 </p>
             </div>
             <div class="col-md-4">
-            {% if not request.user.is_authenticated %}
-                {% dept_name as department_name %}
-                <div class="card">
-                    <div class="card-header">
-                        Access to {% system_name %}
-                    </h2>
-                    <div class="card-body">
-                        <h4>
-                            {% system_name %} Password-less Logins
-                        </h4>
-                        <p class="card-text">
-                            At the {{ department_name }}, we employ a password-less authentication system, meaning you never need to remember
-                            a password. When you need to login to a site, such as {% system_name %}, simply enter your email and an
-                            authentication code will be sent to your registered email address. From there, enter the code on screen to complete the login process.
-                        </p>
-                        <a class="btn btn-primary" href="{{ PUBLIC_URL }}ssologin">Login</a>
+                {% if not request.user.is_authenticated %}
+                    {% dept_name as department_name %}
+                    <div class="card">
+                        <div class="card-header">
+                            Access to {% system_name %}
+                        </div>
+                        <div class="card-body">
+                            <h4>{% system_name %} Password-less Logins</h4>
+                            <p class="card-text">
+                                At the {{ department_name }}, we employ a password-less authentication system, meaning you never need to remember
+                                a password. When you need to login to a site, such as {% system_name %}, simply enter your email and an
+                                authentication code will be sent to your registered email address. From there, enter the code on screen to complete the login process.
+                            </p>
+                            <a class="btn btn-primary" href="{{ PUBLIC_URL }}ssologin">Login</a>
+                        </div>
                     </div>
-                </div>
-            {% endif %}
+                {% endif %}
             </div>
         </div>
     </div>
-{% endblock %}
+{% endblock content %}
