Replaced col-sm-offset-3 with offset-3 in template files

--- a/commercialoperator/templates/commercialoperator/booking/success_compliance_fee.html
+++ b/commercialoperator/templates/commercialoperator/booking/success_compliance_fee.html
@@ -42,7 +42,7 @@
                     </label>
                 </div>
             {% else %}
-                <div class="col-sm-offset-3 col-sm-6 borderDecoration">
+                <div class="col-sm-6 borderDecoration offset-3">
                     <strong>Sorry it looks like there isn't any compliance currently in your session.</strong>
                 </div>
             {% endif %}
