--- a/commercialoperator/templates/commercialoperator/booking/success_fee.html
+++ b/commercialoperator/templates/commercialoperator/booking/success_fee.html
@@ -64,7 +64,7 @@
                     </div>
                 {% endif %}
             {% else %}
-                <div class="col-sm-offset-3 col-sm-6 borderDecoration">
+                <div class="col-sm-6 borderDecoration offset-3">
                     <strong>Sorry it looks like there isn't any proposal currently in your session.</strong>
                 </div>
             {% endif %}
