--- a/commercialoperator/templates/commercialoperator/booking/success_zero_fee.html
+++ b/commercialoperator/templates/commercialoperator/booking/success_zero_fee.html
@@ -31,7 +31,7 @@
                     {% endif %}
                   </div>
             {% else %}
-                <div class="col-sm-offset-3 col-sm-6 borderDecoration">
+                <div class="col-sm-6 borderDecoration offset-3">
                     <strong>Sorry it looks like there isn't any proposal currently in your session.</strong>
                 </div>
             {% endif %}
