Replaced { url ssologin } with /ssologin in template files

--- a/commercialoperator/templates/commercialoperator/base.html
+++ b/commercialoperator/templates/commercialoperator/base.html
@@ -53,7 +53,7 @@
 {% block menu_items2_right %}
     {% if request.user.is_authenticated %}
     {% else %}
-        <a href="{% url 'ssologin' %}" class="btn btn-primary btn-sm">Login</a>
+        <a href="/ssologin" class="btn btn-primary btn-sm">Login</a>
     {% endif %}
 {% endblock menu_items2_right %}
 {% block menu_spacer %}
