--- a/commercialoperator/templates/commercialoperator/index.html
+++ b/commercialoperator/templates/commercialoperator/index.html
@@ -39,7 +39,7 @@
                                 a password. When you need to login to a site, such as {% system_name %}, simply enter your email and an
                                 authentication code will be sent to your registered email address. From there, enter the code on screen to complete the login process.
                             </p>
-                            <a class="btn btn-primary" href="{{ PUBLIC_URL }}ssologin">Login</a>
+                            <a class="btn btn-primary" href="/ssologin">Login</a>
                         </div>
                     </div>
                 {% endif %}
