--- a/commercialoperator/templates/ledgerui/accounts_base_b5.html
+++ b/commercialoperator/templates/ledgerui/accounts_base_b5.html
@@ -4,7 +4,7 @@
 
 {% block myaccount_nav %}
 
-<button class="nav-link managed-account-nav" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Profile</button>
+<button class="nav-link managed-account-nav" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false">Organisation</button>
 
 {% endblock %}
 
